# course-consultant

./: .env.example  .gitignore  DATA_PROCESSING_SUMMARY.md  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  rag_demo_app.py  requirements.txt
data/114/: department.json  standard.json  進修部.json
data/114的課程JSON（常潤提供）/: standard.json
data/processed/: graduation_rules.json  id_mapping.json  main_courses.json  research_courses.json  standard_courses.json
data/北科行政公開資料（常潤提供）/: 10_急難救助[遇案辦理]_cleaned.txt  12_生活助學金_cleaned.txt  13_勞僱型工讀助學金_cleaned.txt  14_研究生獎助學金_cleaned.txt  16_教育部學產基金低收入戶學生助學金_cleaned.txt  17_助學措施_cleaned.txt  18_大專校院學習型獎助生團體保險_cleaned.txt  19_學業成績優良書卷獎(教務處)_cleaned.txt  20_本國優秀研究生獎勵(教務處)_cleaned.txt  21_外語檢定通過獎學金(教務處)_cleaned.txt  22_各教學單位所屬獎學金-逕洽各教學單位_cleaned.txt  25_教育部圓夢助學網_cleaned.txt  26_首頁_cleaned.txt  27_獎學金公告_cleaned.txt  28_校外獎學金(自行辦理)_cleaned.txt  29_(截止日期：114_10_15) 雲田社會福利慈善事業基金會_cleaned.txt  30_(截止日期：114_10_10) 臺南市臺疆祖廟大觀音亭暨祀_cleaned.txt  31_(截止日期：114_10_10) 慈暉文教基金會_cleaned.txt  32_(截止日期：114_10_07 ) 圖書館學會_cleaned.txt  33_(截止日期：114_10_03 ) 生命書寫文學獎_cleaned.txt  34_(截止日期：114_10_31) 大碩青年清寒獎助學金_cleaned.txt  35_(截止日期：114_10_15) 金門縣政府獎學金_cleaned.txt  36_(截止日期：114_10_15) 台北市吳姓宗親會獎學金_cleaned.txt  37_(截止日期：114_09_30) 胡連精密獎學金_cleaned.txt  38_(截止日期：114_11_30) 綠產業發展教育基金會獎學金_cleaned.txt  40_(截止日期：114_10_31) 熱河同鄉會_cleaned.txt  (+45 more)
server/: webhook_server.py
src/: cli.py  loaders.py  pipeline_utils.py  preprocess_courses.py  rag_engine.py  rag_engine_ollama.py  rag_ingestion.py  rag_ingestion_ollama.py  server.py
templates/: index.html
(+4410 files in other folders)
