[project]
name = "course-consultant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.2.1",
    "langchain-huggingface>=1.2.1",
    "langchain-milvus>=0.3.3",
    "langchain-text-splitters>=1.1.1",
    "langgraph>=1.0.10",
    "sentence-transformers>=5.2.3",
]
